--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -304,14 +304,14 @@ Deal To Players_5=PropertyWrapper.DefaultValueCategory.All Cards
 Deal Cards=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 Deal Cards_4=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 SceneComponent=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
-SceneComponent=
+SceneComponent=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
 None=======
 None=======
 None=======
 None=======
 BillboardComponent=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
-BP_I_Doubt_It_Game_Manager_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
-K2Node_MacroInstance=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
+BP_I_Doubt_It_Game_Manager_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
+K2Node_MacroInstance=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
 BPC_CurrentHand_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 End Game=PropertyWrapper.DefaultValueCategory.All Cards
 End Game_6=PropertyWrapper.DefaultValueCategory.All Cards
@@ -320,21 +320,21 @@ CapsuleComponent=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.
 SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 Character=PropertyWrapper.DefaultValueCategory.All Cards
 K2Node_BreakStruct=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.All Cards,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision
-BP_Card_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
+BP_Card_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
 Blueprint=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 CharacterMovementComponent=PropertyWrapper.DefaultValueCategory.All Cards
 BP_Player_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
-BP_Player_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
+BP_Player_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
 Check If Game Over=PropertyWrapper.DefaultValueCategory.All Cards
 Check If Game Over_6=PropertyWrapper.DefaultValueCategory.All Cards
-BP_Turn_Manager_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
+BP_Turn_Manager_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
 StaticMeshActor=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 Setup Main Game=PropertyWrapper.DefaultValueCategory.All Cards
 Setup Main Game_2=PropertyWrapper.DefaultValueCategory.All Cards
-Add Card To Pile=PropertyWrapper.DefaultValueCategory.All Cards
+Add Card To Pile=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
 GM_Bar_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 End Player Turn=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
-AddCard=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
+AddCard=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
 AddCard_1=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 Start First Turn=PropertyWrapper.DefaultValueCategory.All Cards
 Start First Turn_4=PropertyWrapper.DefaultValueCategory.All Cards
@@ -360,8 +360,8 @@ PlayerController=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.
 Hover Check=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 Sort Current Hand=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 Sort Current Hand_7=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
-K2Node_FunctionEntry=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
-Remove Card From Visual Pile=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
+K2Node_FunctionEntry=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
+Remove Card From Visual Pile=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
 Doubt Correct=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 Doubt Correct_8=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 Doubt Incorrect_9=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
@@ -375,6 +375,7 @@ Slap _7=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultVa
 EdGraphNode=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
 PlayCard=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
 PlayCard_6=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
+Remove Card From Visual Pile_3=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Player/Input/IMC
@@ -1631,8 +1632,8 @@ EditPivotToolProperties="\"Object\" "
 InteractiveToolPropertySet="\"Object\" "
 EditPivotToolActionPropertySet="\"Object\" "
 TransformMeshesToolProperties="\"Object\" "
-InputAction="\"Object\" \"Object.Modifiers.Modifiers[0]\" "
-DataAsset="\"Object\" \"Object.Modifiers.Modifiers[0]\" "
+InputAction="\"Object\" "
+DataAsset="\"Object\" "
 UserDefinedEnum="\"Object\" "
 Enum="\"Object\" "
 Field="\"Object\" "
@@ -1664,7 +1665,7 @@ None=======
 None=======
 None=======
 InstancedStaticMeshComponent="\"Object\" "
-BP_CardPile_C="\"Object\" \"Object.Actor.Tags\" "
+BP_CardPile_C="\"Object\" "
 PreviewMaterial="\"Object\" "
 Material="\"Object\" "
 MaterialInterface="\"Object\" "
@@ -1748,6 +1749,9 @@ W_Winner_C="\"Object\" "
 UserWidget="\"Object\" "
 Widget="\"Object\" "
 Visual="\"Object\" "
+StaticMesh="\"Object\" "
+StreamableRenderAsset="\"Object\" "
+AssetViewerSettings="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
@@ -1758,13 +1762,15 @@ None=======
 None=======
 None=======
 None=======
+RecentAssetEditors=StaticMeshEditor
+RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=
-RecentAssetEditors=
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=
@@ -1786,41 +1792,43 @@ RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
-RecentAssetEditors=
-OpenAssetsAtExit=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager.BP_Rat_Screw_Game_Manager
+OpenAssetsAtExit=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager.BP_I_Doubt_It_Game_Manager
 OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BP_Card_Dealer.BP_Card_Dealer
 OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BP_CardPile.BP_CardPile
+OpenAssetsAtExit=/Game/Player/BP_Player.BP_Player
+OpenAssetsAtExit=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager.BP_Rat_Screw_Game_Manager
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Shared_Game_Mechanics/Cards/BP_CardPile
-MRUItem1=/Game/Shared_Game_Mechanics/Cards/BP_Card_Dealer
+MRUItem0=/Game/LevelPrototyping/Meshes/SM_ChamferCube
+MRUItem1=/Game/Player/Input/IMC/IMC_Rat_Screw
 MRUItem2=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
-MRUItem3=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager
-MRUItem4=/Game/Shared_Game_Mechanics/BPI_Playing_Character
-MRUItem5=/Game/Player/BP_Player
-MRUItem6=/Game/Player/Input/IMC/IMC_Rat_Screw
-MRUItem7=/Game/UI/Non_Diegetic/WBP_On_Screen_Text
-MRUItem8=/Game/NPCs/BP_NPC
-MRUItem9=/Game/Player/Input/IMC/IMC_I_Doubt_It
-MRUItem10=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
-MRUItem11=/Game/Player/Input/Actions/Card_Selection/IA_Previous_Card
-MRUItem12=/Game/Player/Input/Actions/Card_Selection/IA_Next_Card
-MRUItem13=/Game/Shared_Game_Mechanics/Cards/BPI_Card
-MRUItem14=/Game/Shared_Game_Mechanics/Cards/BP_Card
-MRUItem15=/Game/Shared_Game_Mechanics/Cards/Enum_Card_Sort_Methods
-MRUItem16=/Game/Shared_Game_Mechanics/BPC_CurrentHand
-MRUItem17=/Game/Main_Game_Managers/Rat_Screw/Enum_RatScrewPlayers
-MRUItem18=/Game/Player/Input/Actions/Card_Selection/IA_Select_Card_w_Mouse
-MRUItem19=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem20=/Game/Player/Input/IMC/IMC_Auction
-MRUItem21=/Game/Player/Input/Actions/Card_Selection/IA_Lock_Camera
-MRUItem22=/Game/Modes_Instances/Modes/GM_Bar
-MRUItem23=/Game/Shared_Game_Mechanics/Cards/DT_Cards
-MRUItem24=/Game/Player/Input/Actions/RatScrew/IA_Slap
-MRUItem25=/Game/Player/Input/Actions/IA_End_Turn
-MRUItem26=/Game/Player/Input/Actions/Card_Selection/IA_Select_Card
-MRUItem27=/Game/Player/Input/IMC/IMC_Bar
-MRUItem28=/Game/Player/Input/IMC/IMC_Pool
+MRUItem3=/Game/Player/BP_Player
+MRUItem4=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
+MRUItem5=/Game/Shared_Game_Mechanics/Cards/BP_CardPile
+MRUItem6=/Game/Shared_Game_Mechanics/Cards/BP_Card_Dealer
+MRUItem7=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager
+MRUItem8=/Game/Shared_Game_Mechanics/BPI_Playing_Character
+MRUItem9=/Game/UI/Non_Diegetic/WBP_On_Screen_Text
+MRUItem10=/Game/NPCs/BP_NPC
+MRUItem11=/Game/Player/Input/IMC/IMC_I_Doubt_It
+MRUItem12=/Game/Player/Input/Actions/Card_Selection/IA_Previous_Card
+MRUItem13=/Game/Player/Input/Actions/Card_Selection/IA_Next_Card
+MRUItem14=/Game/Shared_Game_Mechanics/Cards/BPI_Card
+MRUItem15=/Game/Shared_Game_Mechanics/Cards/BP_Card
+MRUItem16=/Game/Shared_Game_Mechanics/Cards/Enum_Card_Sort_Methods
+MRUItem17=/Game/Shared_Game_Mechanics/BPC_CurrentHand
+MRUItem18=/Game/Main_Game_Managers/Rat_Screw/Enum_RatScrewPlayers
+MRUItem19=/Game/Player/Input/Actions/Card_Selection/IA_Select_Card_w_Mouse
+MRUItem20=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem21=/Game/Player/Input/IMC/IMC_Auction
+MRUItem22=/Game/Player/Input/Actions/Card_Selection/IA_Lock_Camera
+MRUItem23=/Game/Modes_Instances/Modes/GM_Bar
+MRUItem24=/Game/Shared_Game_Mechanics/Cards/DT_Cards
+MRUItem25=/Game/Player/Input/Actions/RatScrew/IA_Slap
+MRUItem26=/Game/Player/Input/Actions/IA_End_Turn
+MRUItem27=/Game/Player/Input/Actions/Card_Selection/IA_Select_Card
+MRUItem28=/Game/Player/Input/IMC/IMC_Bar
+MRUItem29=/Game/Player/Input/IMC/IMC_Pool
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
@@ -3097,6 +3105,16 @@ W_Winner_C.Localization=True
 W_Winner_C.Accessibility=True
 W_Winner_C.Rendering=True
 W_Winner_C.Navigation=True
+StaticMesh.StaticMeshMaterials=True
+StaticMesh.NaniteSettings=True
+StaticMesh.LODCustomMode=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.Collision=True
+StaticMesh.ImportSettings=True
+StaticMesh.RayTracing=True
+StaticMesh.Navigation=True
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter=0
@@ -3146,6 +3164,7 @@ None=======
 /Game/Player/Input/Actions/Card_Selection/IA_Scroll_Wheel_Selection.IA_Scroll_Wheel_Selection=1
 /Game/UI/Non_Diegetic/RatScrew/W_Winner.W_Winner=1
 /Game/UI/Non_Diegetic/WBP_On_Screen_Text.WBP_On_Screen_Text=1
+/Game/LevelPrototyping/Meshes/SM_ChamferCube.SM_ChamferCube=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
